--- a/src/Main.css
+++ b/src/Main.css
@@ -9,7 +9,46 @@
 body{
 	min-width: 100%;
 	min-height: 100vh;
+	background:#393737;
 }
+
+/* LOADING PAGE */
+.loading-page{
+	position:fixed;
+	top:0;
+	left:0;
+	color:white;
+	height:100%;
+	width:100%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+svg{
+	width:100px;
+	height:100px;
+}
+
+svg rect{
+	width:100px;
+	height:100px;
+	fill:none;
+	stroke-width:100px;
+	stroke: #00adff;
+	stroke-dasharray:100;
+	stroke-dashoffset:50%;
+	animation: animate 2s linear infinite;
+	
+}
+
+@keyframes animate{
+	to {
+		stroke-dashoffset: 250%;
+	}
+}
+
+/* HERO SECTION */
 
 .hero-section{
 	position:relative;
@@ -50,11 +89,16 @@ body{
 	width: 100%;
 	height:100%;
 	object-fit:cover;
-	/* z-index:; */
+	/* z-index:40; */
 }
 
 .inactive{
 	display:none;
+}
+
+.hero-section .top-youtube>iframe{
+	width:100%;
+	height:100%;
 }
 
 .hero-details{
@@ -150,6 +194,8 @@ body{
 	/* cursor:pointer; */
 }
 
+
+/* THE EPISODE SECTION */
 .episodes-section{
 	width:100%;
 	min-height: 180vh;
