--- a/src/Main.css
+++ b/src/Main.css
@@ -198,7 +198,7 @@ svg rect{
 /* THE EPISODE SECTION */
 .episodes-section{
 	width:100%;
-	min-height: 180vh;
+	min-height: 120vh;
 	background: #393737;
 	padding: 50px 25px;
 }
@@ -340,6 +340,12 @@ svg rect{
 	background:#C4C4C4;
 }
 
+.episode-box>header>img{
+	width:100%;
+	height:100%;
+	object-fit:cover;
+}
+
 .episode-box>footer{
 	height: 25%;
 	display:flex;
@@ -354,6 +360,28 @@ svg rect{
 
 .episode-box>footer>h3{
 	font-family: 'Space Grotesk',sans-serif;
+}
+
+.info-section{
+	width:100%;
+}
+
+.info-breakdown{
+	min-height: 10vh;
+	margin-bottom: 20px;
+	width:100%;
+	color:white;
+}
+
+.episode-youtube{
+	height: 70vh;
+	width:80%;
+	margin: 0 auto;
+}
+
+.episode-youtube>iframe{
+	width:100%;
+	height:100%;
 }
 
 .load-more{
@@ -373,7 +401,7 @@ svg rect{
 	cursor:pointer;
 }
 
-
+/* THE MEDIA LINKS SECTIONS */
 .connect-section{
 	width:100%;
 	min-height: 40vh;
