--- a/src/Main.css
+++ b/src/Main.css
@@ -171,6 +171,11 @@ svg rect{
 	border-radius:48px;
 	background:#A5F200;
 	cursor:pointer;
+	transition:all 0.3s ease-out;
+}
+
+.details-lower button:hover{
+	transform:scale(1.04);
 }
 
 .details-lower button img{
@@ -198,7 +203,7 @@ svg rect{
 /* THE EPISODE SECTION */
 .episodes-section{
 	width:100%;
-	min-height: 120vh;
+	min-height: 100vh;
 	background: #393737;
 	padding: 50px 25px;
 }
@@ -236,6 +241,15 @@ svg rect{
 .info-container button.active{
 	border-radius: 48px;
 	border:1px solid #A5F200;
+	color:#A5F200;
+}
+
+.info-container button.active:hover{
+	border:1px solid #d5ff7c;
+	color:#d5ff7c;
+}
+
+.info-container button:not(.active):hover{
 	color:#A5F200;
 }
 
@@ -297,10 +311,11 @@ svg rect{
 .episodes-dropdown{
 	position:absolute;
 	top:10px;
-	right:12px;
-	min-height: 30px;
-	width: 122px;
-	background:coral;
+	right:19px;
+	min-height: 40px;
+	width: 110px;
+	background:#393737;
+	padding-top: 5px;
 	border: 1px solid #A5F200;
 	border-top:none;
 	opacity:0;
@@ -312,6 +327,19 @@ svg rect{
 	top:30px;
 	opacity:1;
 	visibility:visible;
+	z-index: 1;
+}
+
+.episodes-dropdown>li{
+	padding: 4px 0;
+	list-style:none;
+	text-align:center;
+	cursor:pointer;
+}
+
+.episodes-dropdown>li:hover{
+	background:lightgrey;
+	color:black;
 }
 
 .episodes-container{
@@ -338,13 +366,19 @@ svg rect{
 	width:100%;
 	height: 75%;
 	background:#C4C4C4;
+	overflow:hidden;
 }
 
 .episode-box>header>img{
 	width:100%;
 	height:100%;
 	object-fit:cover;
+	transition: all 0.3s ease-out;
 }
+
+.episode-box>header:hover img{
+	transform: scale(1.08);
+} 
 
 .episode-box>footer{
 	height: 25%;
